Compiler/src/main/java/Testing/Tests/SemanticTests/passing/ArrayTest.ru
/? Descripción: caso de prueba que verifica que los arrays sean tomados correctamente
/? Salida esperada:
/? CORRECTO: SEMANTICO - DECLARACIONES

struct Xd {
    Array Int ola;
}
impl Xd {
    fn m2(Array Bool comoEstas) -> Array Str {
        Array Str chau;
        ret chau;
    }
    .(){}
}
start {}